# kicad-generator

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: lib.rs  main.rs
src/parser/: mod.rs
src/schematic/: graphic.rs  mod.rs  symbol.rs  symbol_library.rs
static/included_libs/: JLCPCB-Analog  JLCPCB-Capacitors  JLCPCB-Connectors_Buttons  JLCPCB-Crystals  JLCPCB-Diode-Packages  JLCPCB-Diodes  JLCPCB-Extended  JLCPCB-ICs  JLCPCB-Inductors  JLCPCB-Interface  JLCPCB-MCUs  JLCPCB-Manufacturing  JLCPCB-Memory  JLCPCB-Optocouplers  JLCPCB-Power  JLCPCB-Resistors  JLCPCB-Transistor-Packages  JLCPCB-Transistors
