[package]
name = "kicad-generator"
version = "0.1.0"
edition = "2024"
authors = ["Taraxtix <antonin.brauer@yahoo.fr>"]
license = "MIT"
include = ["static/**/*", "static/*"]

[lib]
name = "kicad_generator"

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
lazy_static = "1.5.0"
uuid = { version = "1.18.1", features = ["v4"] }
regex = "1.12.2"
log = "0.4.28"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "color"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
